# xssl

./: .gitignore  .gitlab-ci.yml  pyproject.toml  readme.md
data/: bounds_cnr_over_range_rhi.csv
scripts/: example_xssl.py
src/xssl/: __init__.py  func_cnr_over_range.py  func_xssl.py
support/: requirements-dev.txt  requirements.txt
